--- a/index.html
+++ b/index.html
@@ -10,106 +10,123 @@
   </head>
   <body>
     <header class="py-4">
-        <nav class=" navbar navbar-expand-md navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand text-uppercase fw-bold" href="#" >
-                    <span class="bg-gradient p-1 rounded-3 text-primary">John</span>Doe
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
-                  <a class="navbar-brand" href="#moi">Qui suis-je ?</a>
-                  <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#expertise">Expertise</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#contact">Contact</a>
-                    </li>
-                  </ul>
-            </div>
-        </nav>
+        <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <div class="container">
+            <a class="navbar-brand text-uppercase fw-bold" href="#" >
+              <span class="bg-gradient p-1 rounded-3 text-light bg-primary">John</span>Doe
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#moi">Qui suis-je ?</a>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#expertise">Expertise</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+          </div>
+          
+        </div>
+      </div>
     </header>
     <section class="presentation">
         <div class="container">
-            <div class="row mt-5 align-items-center" id="moi">
-                <div class="col-sm-12 offset-md-1 col-md-5">
+            <div class="row mt-5 m-auto align-items-center" id="moi">
+                <div class="col-sm-12 col-md-6">
                     <h2 class="fw-bold">Lorem ipsum dolor sit amet.</h2>
                     <h6 class="fw-ligth">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, dignissimos.</h6>
                     <button class="btn btn-success rounded-0 mt-5">Mon Expertise Web</button>
                 </div>
-                <div class="col-sm-12 col-md-5">
-                    <img src="img/moi.jpeg" alt="une photo">
+                <div class="col-sm-12 col-md-6">
+                    <img class="reduire" src="img/moi.jpeg" alt="une photo">
                 </div>
             </div>
         </div>
     </section>
     <section id="expertise" class="py-5 bg-light">
-        <div class="container" id="expertise>
+        <div class="container" id="expertise">
           <h2 class="mb-0">Mon Expertise</h2>
           <h3 class="fw-light fs-5">Developpement Web et Design</h3>
           <div class="row gy-4 mt-4">
-            <div class="col-12 col-md-7">
-              <div class="row align-items-center">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">HTML 5</p>
+            <div class="col-sm-12 col-md-7">
+              <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="bg-white p-3 d-flex">
+                    <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                      <div class="d-flex justify-content-center espace">
+                        <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                        <p class="fw-bold m-0">HTML5</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-css3 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">CSS 3</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="col">
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">PhotoShop</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-css3 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">CSS3</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">Illustrator</p>
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">PhotoShop</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">Illustrator</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -125,61 +142,77 @@
             </div>
             <div class="col-12 offset-md-1 col-md-7">
               <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">HTML 5</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">CSS 3</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">HTML5</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">PhotoShop</p>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">CSS3</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="bg-white p-3 d-flex">
-                  <div class="col-5 col-sm-4 col-md-3 col-xl-2">
-                    <div class="d-flex justify-content-center">
-                      <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
-                      <p class="fw-bold m-0">Illustrator</p>
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">PhotoShop</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="mb-3 p-3 bg-white">
+                  <div class="row align-items-center">
+                    <div class="bg-white p-3 d-flex">
+                      <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                        <div class="d-flex justify-content-center espace">
+                          <i class="fa-brands fa-html5 fa-2x me-2 text-primary"></i>
+                          <p class="fw-bold m-0">Illustrator</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="progress">
+                          <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -194,7 +227,7 @@
           <h4>Projet perso et pro</h4>
             <div class="row my-5 espace">
               <div class="card-group">
-                <div class="card">
+                <div class="card col-sm-12 col-md-3 col">
                   <img src="img/Projet1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -202,7 +235,7 @@
                     <a href="#" class="btn btn-primary">En savoir plus</a>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card col-sm-12 col-md-3">
                   <img src="img/projet2.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -210,7 +243,7 @@
                     <a href="#" class="btn btn-primary mt-5">En savoir plus</a>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card col-sm-12 col-md-3">
                   <img src="img/projet3.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -218,7 +251,7 @@
                     <a href="#" class="btn btn-primary">En savoir plus</a>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card col-sm-12 col-md-3">
                   <img src="img/projet4.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -280,7 +313,7 @@
           <div class="row gy-4">
             <div class="col-12 col-md-4">
               <a class="navbar-brand text-uppercase fw-bold" href="#" >
-                <span class="bg-gradient p-1 rounded-3 text-primary">John</span>Doe
+                <span class="bg-gradient p-1 rounded-3 text-light bg-primary">John</span>Doe
             </a>
             </div>
             <div class="col-12 col-md-4">
